[package]
name = "meowping"
version = "1.9.3"
authors = ["Entytaiment25"]
edition = "2024"
rust-version = "1.89.0"
description = "A simple ping utility written in Rust, that is focused on being size efficient and fast."
repository = "https://github.com/entytaiment25/meowping"
license = "MIT"
keywords = [
    "ping",
    "utility",
    "networking",
    "meowping",
    "command-line-utilities",
    "icmp",
    "tcp",
    "http",
    "https",
]
categories = ["networking", "ping", "utility", "command-line-utilities"]
readme = "README.md"
build = "build.rs"

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
native-tls = "0.2.14"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.177" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
], default-features = false }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["consoleapi", "processenv", "winbase", "wincon"]

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
