cargo-features = ["panic-immediate-abort"]

[package]
name = "meowping"
version = "2.0.7"
authors = ["Entytaiment25"]
edition = "2024"
rust-version = "1.96.0"
description = " A flexible ping utility Tool written in Rust, that is focused on being size efficient and fast."
repository = "https://github.com/entytaiment25/meowping"
homepage = "https://github.com/entytaiment25/meowping"
license = "MIT"
keywords = ["icmp", "tcp", "udp", "http", "ping"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
build = "build.rs"

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
opt-level = "z"
panic = "immediate-abort"
strip = "symbols"

[dependencies]
native-tls = { version = "0.2.18" }

[target.'cfg(target_os = "linux")'.dependencies]
native-tls = { version = "0.2.18", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.186" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Console",
], default-features = false }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
